[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Texturas/superfície-de-ressonância-com-fundo-textura-madeira-da-vintage-para-projeto-224453041.jpg" type="Texture" id=1]
[ext_resource path="res://Mechanic/Area2D.gd" type="Script" id=2]
[ext_resource path="res://Mechanic/light.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 99.5, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 99, 56 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "horizontal_vertical"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "vertical_horizontal"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}

[node name="Door" type="Node2D"]

[node name="Body" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( 99.5, 20 )
z_index = 1
shape = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Body"]
margin_right = 199.0
margin_bottom = 40.0
texture = ExtResource( 1 )
expand = true

[node name="Area2D" type="Area2D" parent="Body"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Area2D"]
position = Vector2( 100, 20 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
reset_on_save = false
anims/RESET = SubResource( 3 )
anims/horizontal_vertical = SubResource( 4 )
anims/vertical_horizontal = SubResource( 5 )

[node name="Light2D" parent="." instance=ExtResource( 3 )]
enabled = false

[connection signal="body_entered" from="Body/Area2D" to="Body/Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Body/Area2D" to="Body/Area2D" method="_on_Area2D_body_exited"]
